# Carbon.Lab

./: .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: fs-test.yml
assets/testing/: seed.txt
docs/: brainstorming.excalidraw  mental_design.md  overview.mermaid  requirements.md
include/carbon/: core.h  main.h
include/carbon/components/: C14Parser.h
include/carbon/features/: SubFileSystem.h
include/carbon/features/fs/: File.h  SubFileSystem.h
include/carbon/utils/generators/: UUID.h
src/: carbon.cpp  carbon.h  core.h
src/components/: C14Parser.cpp  ConfigurationParser.cpp  ConfigurationParser.h
src/core/: C14Parser.h
src/features/fs/: File.h  SubFileSystem.cpp  SubFileSystem.h
src/features/fs/parsers/: FsC14Parser.cpp  FsC14Parser.h
src/features/fs/parsers/schemas/: C14FsSchema.h
src/features/fs/tests/: Parser.test.cpp  SubFs.test.cpp
src/utils/datetime/: DateTime.cpp  DateTime.h  TimeUnit.enum.cpp  TimeUnit.enum.h
src/utils/generators/: StringSeeds.cpp  StringSeeds.h  UUID.h
src/utils/generators/tests/: UUID.test.cpp
src/utils/logging/: Color.cpp  Color.h  Format.h  Logger.cpp  Logger.h
tests/: Entry.test.cpp  HealthCheck.cpp
tests/utils/: UUID.test.cpp
